--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,35 +1,95 @@
+@import url('https://fonts.cdnfonts.com/css/samsungone');
 body {
+    font-family: 'SamsungOne', sans-serif;
+    /* font-family: 'Samsung Sharp Sans', sans-serif; */
+}
+
+.body {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 90vh;
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    border:1px solid black;
+    flex-wrap: wrap;
+    border: 1px solid black;
     border-radius: 5px;
     min-width: 250px;
-    min-height:300px;
+    min-height: 300px;
 }
-.info{
+
+.info {
     display: flex;
     flex-direction: column;
 }
-#location{
+
+#location {
     display: flex;
+    flex-direction: row;
     flex-direction: inherit;
     align-items: center;
+    justify-content: center;
     padding: 20px;
-    font-size: large;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 400;
+    ;
 }
 #temperature {
     display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    padding: 10px;
+    flex-direction:row;
+    align-items: flex-start;
+    padding-left: 10px;
+    padding-top: 10px;
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 500;
 }
+#temp {
+    padding-left: 3px;
+    font-size: 15px;
+    font-weight: 50;
+}
+sup{
+    padding-left: 3px;
+    padding-right: 2px;
+    font-size: 10px;
+    font-weight: 50;
+}
+#status {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 10px;
+    padding-left: 10px;
+    font-size: 15px;
+}
+#minmax {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding-left:10px;
+    padding-top: 20px;
+    font-weight: 300;
+    font-size: 18px;
+}
+/* #minmaxl {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding-left: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 300;
+    font-size: 18px;
+} */
+ #wind{
+    padding-left: 15px;
+ }
+ .img{
+    align-items: end;
+    justify-content: end;
+    padding-left: 25px;
+    padding-bottom: 5px;
+ }
