--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
                         <img src="images/cloud.svg"draggable="false"></img><br>
                     </div>
                 </span>
-                <span id="status">Raining</span>
+                <span id="status"><%= description %></span>
             </div>
             <div class="Info"> 
                 <span id="minmax"><%= min %><sup>o</sup>/&nbsp;<%= min %><sup>o</sup></span>
