--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -60,7 +60,7 @@ sup{
 }
 #status {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     padding-top: 10px;
     padding-left: 10px;
