--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -72,8 +72,17 @@ sup{
     align-items: flex-start;
     padding-left:10px;
     padding-top: 20px;
-    font-weight: 300;
-    font-size: 18px;
+    font-weight: 200;
+    font-size: 17px;
+}
+#minmaxq {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding-left: 10px;
+    padding-top: 20px;
+    font-weight: 100;
+    font-size: 16px;
 }
 /* #minmaxl {
     display: flex;
@@ -86,15 +95,16 @@ sup{
     font-size: 18px;
 } */
  #wind{
-    padding-left: 20px;
+    padding-left: 27px;
  }
  .img{
-    align-items: end;
-    justify-content: end;
     padding-left: 35px;
-    padding-bottom: 5px;
+    
  }
 date{
     padding: 8px;
     font-size: 15px;
+}
+#humid{
+    padding-left: 20px;
 }
