--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,31 +2,49 @@
 body {
     font-family: 'SamsungOne', sans-serif;
     user-select: none;
+background-image: radial-gradient(circle farthest-corner at 1.3% 2.8%, rgba(239, 249, 249, 1) 0%, rgba(182, 199, 226, 1) 100.2%);
     /* font-family: 'Samsung Sharp Sans', sans-serif; */
 }
 
-.body {
+.body1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 90vh;
+    
+   
+}
+.query1{
+    display: flex;
+    align-items: center;
+    justify-content: center;        
+    margin-top:10px;
+    min-height: 20vh;
+}
+.querymain1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 20vh;
 }
 
-.container {
+.container12 {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     border-radius: 5px;
     min-width: 250px;
     min-height: 300px;
+    background-attachment:fixed;
+   
 }
 
-.info {
+.info1 {
     display: flex;
     flex-direction: column;
 }
 
-#location {
+#location1 {
     display: flex;
     flex-direction: row;
     flex-direction: inherit;
@@ -38,7 +56,7 @@ body {
     font-size: 25px;
 
 }
-#temperature {
+#temperature1 {
     display: flex;
     flex-direction:row;
     align-items: flex-start;
@@ -47,18 +65,17 @@ body {
     font-size: 40px;
     font-weight: 500;
 }
-#temp {
-    padding-left: 3px;
-    font-size: 15px;
-    font-weight: 50;
+#tt1{
+    font-size: 20px;
 }
-sup{
+.sup1{
     padding-left: 3px;
+    padding-top: 26px;
     padding-right: 2px;
     font-size: 10px;
     font-weight: 50;
 }
-#status {
+#status1 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -66,7 +83,7 @@ sup{
     padding-left: 10px;
     font-size: 15px;
 }
-#minmax {
+#minmax1 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -75,29 +92,19 @@ sup{
     font-weight: 200;
     font-size: 17px;
 }
-#minmaxq {
+#minmaxq1 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding-left: 10px;
     padding-top: 20px;
     font-weight: 100;
-    font-size: 16px;
+    font-size: 15px;
 }
-/* #minmaxl {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding-left: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-weight: 300;
-    font-size: 18px;
-} */
- #wind{
+
+ #wind1{
     padding-left: 27px;
  }
- .img{
+ .img1{
     padding-left: 35px;
     
  }
@@ -105,6 +112,37 @@ date{
     padding: 8px;
     font-size: 15px;
 }
-#humid{
+#humid1{
     padding-left: 20px;
+}
+.ist1{
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    flex-direction: row;
+    padding-top: 10px;
+    font-size: 9px;
+    font-style: italic;
+    font-weight: 100;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 40px;
+}
+#coordinates1{
+    font-size: 10px;
+    font-family: 'Samsung Sharp Sans', sans-serif;
+}
+#coordinatesl1 {
+    font-size: 10px;
+    font-family: 'Samsung Sharp Sans', sans-serif;
+}
+.long1{
+    display: inline;
+}
+#home1{
+    padding-top: 10px;
+}
+input::placeholder {
+    font-size: 12px;
+    font-style: italic;
 }
