--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,7 +59,7 @@
             <a href="https://github.com/karthikambaragonda?tab=repositories" target="_blank" class="nav-link" style="color: black" >Repositories</a>
           </li>&nbsp;&nbsp;
           <li class="nav-item">
-            <a href="/projects" class="nav-link" style="color: black">Projects</a>
+            <a href="/" class="nav-link" style="color: black">Projects</a>
           </li>&nbsp;&nbsp;
         </ul>
       </header>
